fix: alterando texto da logo

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FferrySmart - Sistema de Gerenciamento de Travessias</title>
+    <title>Ferrysmart - Sistema de Gerenciamento de Travessias</title>
     <meta name="description" content="Sistema digital para gerenciamento de travessias de ferry em São Luís. Reserve, acompanhe e seja notificado em tempo real." />
-    <meta name="author" content="FferrySmart" />
+    <meta name="author" content="Ferrysmart" />
 
-    <meta property="og:title" content="FferrySmart - Sistema de Gerenciamento de Travessias" />
+    <meta property="og:title" content="FerrySmart - Sistema de Gerenciamento de Travessias" />
     <meta property="og:description" content="Sistema digital para gerenciamento de travessias de ferry em São Luís" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
